# OpenCopilot

./: .coverage  .env.example  .gitignore  .mcp.json  AI_Coding_Assistants_Comparison.md  AI_Office_Document_Generation_Research.md  API_Comprehensive_Test_Report.md  API_Testing_Report.md  ARCHITECTURE.md  ASU_Architecture_Context_Extraction.md  ASU_Broker_Development_Guide.md  ASU_Code_Review_Report.md  ASU_Custom_Agent_Guide.md  ASU_Daemon_Deployment_Plan.md  ASU_Local_Agent_Roadmap.md  ASU_Next_Gen_Roadmap.md  ASU_Privileged_Broker_Integration_Doc.md  Agent_Core_Modules_Design.md  Agent_Core_Modules_Development_Report.md  Agent_OS_Research_Report.md  All_Skills_LLM_Integration_Report.md  COMPLEX_INTERACTIONS_TEST_REPORT.md  CONTENT_QUALITY_REPORT.md  CREATION_MODE_CODE_REVIEW.md  CREATION_MODE_OPTIMIZATION_PLAN.md  CodingSkill_Code_Review_Report.md  CodingSkill_Implementation_Report.md  Coding_Agent_Design.md  Comprehensive_Matrix_Test_Report.md  DEVELOPMENT.md  Documentation_Update_Report.md  E2E_TEST_REPORT.md  EvaluationSkill_Implementation_Report.md  FINAL_TEST_SUMMARY.md  FileSkill_Implementation_Report.md  FormatSkill_Implementation_Report.md  GOAL_MODE_IMPLEMENTATION_SUMMARY.md  IDE_Extension_Development_Guide.md  KnowledgeSkill_Implementation_Report.md  Knowledge_Graph_Guide.md  (+253 more)
.dbg/: trae-debug-log-v5-hermes-runtime.ndjson  v5-hermes-runtime.env
.repopact/: clusters.json  deps.json  modules.json
agent_pipeline/: __init__.py  middlewares.py  pipeline.py
agents_md_module/: api.py  immune_system.py  rule_engine.py
agents_next/: __init__.py
allure-results/: 03966b1b-a22f-4999-b460-2565656af816-result.json  0c14fcd4-f83e-463a-9396-c5244ae68835-result.json  15893229-2ce7-4f80-9e95-0a2306c6ff57-container.json  1c0ff9eb-2ffc-4177-b6e6-c0a2bb9cdf44-result.json  1f5095a2-535c-4c27-992a-9706e4357e61-result.json  2217424d-7488-48c4-b82e-5f4f22e13c75-result.json  22b1030f-37ad-4ad1-a255-7efeeae0e70e-result.json  27c2d84d-cb36-4931-bea9-95c15f12b400-result.json  29d3f5c9-dfe5-4d52-9dc1-0ac34b785779-result.json  342fac76-6a3f-44d9-a969-8e7219dec9ad-result.json  3da91c11-e9f7-418d-a3cd-fcf8bb371bfb-result.json  43647eb7-2e68-476a-ba6a-ae6612a695a8-result.json  443454fc-c754-4061-a85e-612df42f5d6e-result.json  463e10d8-376f-46b7-ac9e-e11974008e35-result.json  6318bfd9-1511-459c-b0f0-c183220494f4-attachment.txt  669a0e9a-52d4-4f2b-8b02-b44e34c7083a-result.json  66f7f767-9bb6-408a-97cc-fbcb3d495a26-result.json  68df28e8-67ae-4c3f-a24f-684b6e998107-result.json  728439da-3383-452b-b58c-2ce50f6afee4-result.json  73023e69-5d40-4adf-95a4-aa0a3a35a770-result.json  80591218-23ff-4599-a7fd-ddc73191b624-result.json  8495fb4a-cb09-4880-9a85-5e1a3af4ee24-result.json  86a94077-090e-46d5-8ac9-7b25eef18e3d-result.json  8b70b30e-59c6-402a-8ffe-266bd6c96300-result.json  9114d143-ede8-4851-86c3-8cf29186792a-result.json  922040d0-49aa-41d5-a685-1762356127a3-result.json  95405158-8c04-4efc-9aed-676d2a918a5d-result.json  96d48ccc-8f20-4a77-a6da-677a36589d2c-result.json  9732af91-c704-4d80-8398-fe26b6e6a355-result.json  98e0ec38-59bc-427a-b434-4ebb661bff54-result.json  9a58e453-f681-4c72-8098-d1502f0ffae8-result.json  a4795563-6e0d-415d-8c98-76c597315ef4-result.json  a839d496-8450-4921-b40e-9d538c45769c-result.json  aab9c7dc-5543-4c03-ba7c-0d799ba7a474-result.json  b2c9e853-6449-4125-9c19-228d8a47453b-result.json  bd2c4353-6075-4d39-844c-fe247a1dbd8f-result.json  c315c914-c6ed-4065-93d5-707d33167896-result.json  c39c50b9-968d-4cf8-b12f-d2414480e712-result.json  cebfcb8d-9835-46cb-a699-0fcf8a1a338c-result.json  d16bd94d-45ac-4452-bbed-c17276825d3b-result.json  (+11 more)
api/: __init__.py  app.py  models.py
asu-ide-extension/: asu-ide-extension-1.0.0.vsix  extension.js  package-lock.json  package.json
asu_broker/: run.py
canvases/: opencopilot-interaction-redesign.canvas.tsx  opencopilot-ui-interaction-20260609.canvas.data.json  opencopilot-ui-interaction-20260609.canvas.tsx  opencopilot-ui-interaction-20260609.html
coding_agent/: __init__.py  core.py  intent_detector.py  prompt_generator.py  tool_executor.py
config/: default.yaml
context_manager/: __init__.py  core.py
(+600 files in other folders)
