[project]
name = "opencopilot"
version = "4.0.0"
description = "macOS 系统级 AI 操作员 — 右键唤出悬浮卡片，Agent Loop 动态范式"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenCopilot Team" }]
keywords = ["ai", "copilot", "macos", "agent", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pynput>=1.8.2",
    "PyQt6>=6.7.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.1",
    "markdown>=3.5",
    "Pygments>=2.17",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-pptx>=0.6.23",
    "websockets>=12.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "python-docx>=1.1",
    "PyPDF2>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]
eval = [
    "sentence-transformers>=3.0",
]
macos = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]
all = [
    "opencopilot[test,eval,macos]",
]

[project.scripts]
opencopilot-api = "smart_copilot_api:app"

[tool.setuptools.packages.find]
include = ["opencopilot*", "api*", "gui*", "knowledge_graph*", "dialogs*", "widgets*", "platform*"]

[tool.setuptools]
py-modules = [
    "smart_copilot_api",
    "smart_copilot",
    "smart_copilot_platform",
    "asu_custom_agent",
    "config_manager",
    "llm_provider",
    "llm_adapter",
    "ppt_generator",
    "cursor_effects",
    "markdown_renderer",
    "prompt_builder",
    "system_probe_client",
    "api_registry",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
